Modification de la logique metier pas finie